handle replies, fix widths on comment objects, add uuid's to all user generated comments

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ body {
   padding: 15px;
 }
 
+.comment-container,
+.thread-container {
+  width: 100%;
+}
+
 .comment-body {
   display: flex;
   flex-direction: column;
